[F] missing param in editor/{}/col/{col}
